--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,15 @@ dependencies {
     implementation 'org.kodein.di:kodein-di-generic-jvm:6.2.0'
     implementation 'org.kodein.di:kodein-di-framework-android-support:6.2.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    //Material App
+    implementation 'com.google.android.material:material:1.2.1'
+
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha06"
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1'
